--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,6 +14,7 @@
           <a class="nav-link{% if page.path contains 'releases' %} active{% endif %} dropdown-toggle" id="navbardrop" href="/releases" data-toggle="dropdown">Releases</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="/releases/all">All</a>
+            <a class="dropdown-item" href="/releases/all-bootlegs">Bootlegs</a>
             <a class="dropdown-item" href="/releases/2021">2021</a>
             <a class="dropdown-item" href="/releases/2020">2020</a>
             <a class="dropdown-item" href="/releases/2019">2019</a>
