--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,7 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href="/releases/all">All</a>
             <a class="dropdown-item" href="/releases/all-bootlegs">Bootlegs</a>
+            <a class="dropdown-item" href="/releases/2021">2022</a>
             <a class="dropdown-item" href="/releases/2021">2021</a>
             <a class="dropdown-item" href="/releases/2020">2020</a>
             <a class="dropdown-item" href="/releases/2019">2019</a>
