--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -142,7 +142,7 @@
                   <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2022/call-out.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
-                    <small><h5>TBA</h5></small>
+                    <small><h5>Feb 25, 2022</h5></small>
                   </div>
                 </div>
                   <h5 class="mb-0"><small><p class="mb-0 mt-2">Call Out</p></small></h5>
