--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -167,7 +167,7 @@ $(function() {
     }
     console.log(release_str);
     $.each(result[release_str][0], function(i, stores){
-      if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download"){
+      if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download" && i !== "anghami"){
         let icon = "";
         if (i == "itunes"){
           store_title = "iTunes";
