--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -165,7 +165,7 @@ $(function() {
     else {
       release_str = str.replace(/-/g, "");
     }
-    console.log(release_str);
+    console.log(str);
     $.each(result[release_str][0], function(i, stores){
       if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download" && i !== "anghami"){
         let icon = "";
