--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -164,8 +164,8 @@ $(function() {
     else {
       release_str = str.replace(/-/g, "");
     }
-    console.log(result[release_str][0]);
     $.each(result[release_str][0], function(i, stores){
+      console.log(i);
       if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download" && i !== "anghami"){
         let icon = "";
         if (i == "itunes"){
