--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,6 +6,7 @@
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/cc91b92ca8.js?1"></script>
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <script>
       AOS.init();
     </script>
