--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -222,7 +222,7 @@ $(function() {
         else if (i == "tidal-buy"){
           store_title = "Tidal";
           i = tidal;
-          icon = "iconify' data-icon='simple-icons:"+tidal+"'";
+          icon = "iconify' data-icon='simple-icons:"+i+"'";
         }
         else{
           icon = "fab fa-"+i;
