--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -221,7 +221,7 @@ $(function() {
         }
         else if (i == "tidal-buy"){
           store_title = "Tidal";
-          i = tidal;
+          i = "tidal";
           icon = "iconify' data-icon='simple-icons:"+i+"'";
         }
         else{
