--- a/css/bayza.css
+++ b/css/bayza.css
@@ -458,11 +458,16 @@ b a:hover {
 
 .platform-icons {
     display: inline-block;
-    padding: 10px 8px;
+    padding: 11px 9px;
     margin: 0px!important;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .icons-fx:hover {
     filter: saturate(0.85) contrast(0.95) drop-shadow(3px 3px 2px #00000088);
+}
+
+.icons-fx i.fa-fw {
+    text-align: center;
+    width: 1.2em;
 }
