--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -219,9 +219,8 @@ $(function() {
           store_title = "Bandcamp";
           icon = "fab fa-"+i;
         }
-        else if (i == "tidal-buy"){
+        else if (i == "tidal"){
           store_title = "Tidal";
-          i = "tidal";
           icon = "iconify' data-icon='simple-icons:"+i+"'";
         }
         else{
