--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,10 @@
                 <a target="_blank" href="https://geo.itunes.apple.com/us/artist/bayza/882647839?app=itunes">iTunes</a>
               </li>
               <li>
-                <a target="_blank" href="https://store.tidal.com/us/artist/6374717">Tidal</a>
+                <a target="_blank" href="https://www.beatport.com/artist/bayza/411994">Beatport</a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.amazon.com/s?k=Bayza&i=digital-music&s=date-desc-rank">Amazon</a>
               </li>
               <li>
                 <a target="_blank" href="https://bayza.bandcamp.com/">Bandcamp</a>
