--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -215,6 +215,11 @@
             </a>
           </div>
           <div class="m-1">
+            <a class="icons-fx text-white platform-icons tidal_card rounded-circle" href="https://tidal.com/browse/artist/6374717" target="_blank" title="Tidal">
+              <i class="iconify fa-fw" data-icon="simple-icons:tidal" aria-hidden="true"></i>
+            </a>
+          </div> 
+          <div class="m-1">
             <a class="icons-fx text-white platform-icons yandex_card rounded-circle" href="https://music.yandex.com/artist/3753809" target="_blank" title="Yandex Music">
               <i class="fab fa-yandex fa-fw" aria-hidden="true"></i>
             </a>
