--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -170,7 +170,7 @@ $(function() {
     }
     $.each(result[release_str][0], function(i, stores){
       console.log(result[release_str][i]);
-      if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal" && i !== "amazon-music" && i !== "download" && i !== "anghami"){
+      if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download" && i !== "anghami"){
         if (i == "itunes"){
           store_title = "iTunes";
           icon = "fab fa-itunes-note";
