--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -177,7 +177,7 @@ $(function() {
         } 
         else if (i == "beatport"){
           store_title = "Beatport";
-          icon = "fas fa-headphones";
+          icon = "iconify' data-icon='simple-icons:"+i+"'";
         }
         else if (i == "spotify"){
           store_title = "Spotify";
