--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -201,7 +201,7 @@
           </div>
           <div class="m-1">
             <a class="icons-fx text-white platform-icons beatport_card rounded-circle" href="https://www.beatport.com/artist/bayza/411994" target="_blank" title="Beatport">
-              <i class="fas fa-headphones fa-fw" aria-hidden="true"></i>
+              <i class="iconify fa-fw" data-icon="simple-icons:beatport" aria-hidden="true"></i>
             </a>
           </div>
           <div class="m-1">
