--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -79,7 +79,7 @@
             	</div>
           	</div>
           </div>
-          <div id="track-info" class="row mt-4 4">
+          <div id="track-info" class="row mt-4 pb-4">
             <div class="col-12 col-lg-5 info text-center mb-3">
               <img class="img-fx img-fluid release-color-covers" src="https://bayzamusic.com/images/releases/{{ release.year }}/{{ release.cover }}.jpg" alt="{{ release.artists }} - {{ release.title }}">
             </div>
