--- a/css/bayza.css
+++ b/css/bayza.css
@@ -464,7 +464,7 @@ b a:hover {
 }
 
 .icons-fx:hover {
-    filter: saturate(0.85) contrast(0.95) drop-shadow(3px 3px 2px #00000088);
+    filter: saturate(0.85) contrast(0.95) drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.80));
 }
 
 .icons-fx i.fa-fw {
