--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -239,7 +239,7 @@ $(function() {
     console.log(sortedObj);
     $.each(sortedObj, function(i, value){
       $("#platforms").append(
-            "<div role='img' class='mr-2 mb-2' alt='"+ value.store_title +"'><a class='icons-fx text-white platform-icons "+ value.id +"_card rounded-circle' href="+ value.stores +" target='_blank''><i class='fa-fw "+ value.icon +"' aria-hidden='false' role='img'></i></a></div>");
+            "<div class='mr-2 mb-2' title='"+ value.store_title +"'><a class='icons-fx text-white platform-icons "+ value.id +"_card rounded-circle' href="+ value.stores +" target='_blank''><i class='fa-fw "+ value.icon +"' aria-hidden='false' role='img'></i></a></div>");
           console.log(value.stores);
       });
     });
