--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -239,7 +239,7 @@ $(function() {
     console.log(sortedObj);
     $.each(sortedObj, function(i, value){
       $("#platforms").append(
-            "<div class='mr-2 mb-2'><span class='sr-only'>"+ value.store_title +"</span><a class='icons-fx text-white platform-icons "+ value.id +"_card rounded-circle' href="+ value.stores +" target='_blank'><span class='fa-fw "+ value.icon +"' aria-hidden='true'></span></a></div>");
+            "<div class='mr-2 mb-2'><a class='icons-fx text-white platform-icons "+ value.id +"_card rounded-circle' href="+ value.stores +" target='_blank'><span class='fa-fw "+ value.icon +"' aria-hidden='true'></span><span class='sr-only'>"+ value.store_title +"</span></a></div>");
           console.log(value.stores);
       });
     });
