--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -172,7 +172,7 @@ $(function() {
       console.log(result[release_str][i]);
       if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download" && i !== "anghami"){
         if (i == "itunes"){
-          store_title = "iTunes";
+          store_title = "iTunes Store";
           icon = "fab fa-itunes-note";
         } 
         else if (i == "beatport"){
