--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -173,7 +173,7 @@ $(function() {
       if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download" && i !== "anghami"){
         if (i == "itunes"){
           store_title = "iTunes Store";
-          icon = "fab fa-itunes-note";
+          icon = "iconify' data-icon='el:star'";
         } 
         else if (i == "beatport"){
           store_title = "Beatport";
@@ -185,7 +185,7 @@ $(function() {
         }
         else if (i == "apple"){
           store_title = "Apple Music";
-          icon = "fab fa-"+i;
+          icon = "fab fa-itunes-note";
         }
         else if (i == "soundcloud"){
           store_title = "SoundCloud";
