--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -151,6 +151,7 @@ $(function() {
     let release_str;
     let store_title;
     let icon = "";
+    let icon_insert = "";
     let stores_array = [];
     let key = 0;
     if (str == "lo-vas-a-olvidar"){
@@ -170,7 +171,7 @@ $(function() {
     }
     $.each(result[release_str][0], function(i, stores){
       console.log(result[release_str][i]);
-      if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download" && i !== "anghami"){
+      if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download"){
         if (i == "itunes"){
           store_title = "iTunes Store";
           icon = "iconify' data-icon='el:star'";
@@ -223,11 +224,18 @@ $(function() {
           store_title = "Tidal";
           icon = "iconify' data-icon='simple-icons:"+i+"'";
         }
+        else if (i == "anghami"){
+          store_title = "Anghami";
+          icon= "";
+          icon_insert = "<svg class='fa-fw' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='1em' height='1em' viewBox='0 0 160 160'  preserveAspectRatio='xMidYMid meet' role='img'><path class='st0' d='M159.2,79.8c1.1,43.4-35.7,80.1-80.1,79.4c-43.5-0.7-78.8-36.8-78.1-80.7c0.7-43,36.8-78.6,80.8-77.8C124.8,1.4,160.2,37.7,159.2,79.8z M79.7,146c36.4,0,66.2-28.6,66.7-65.1C147,42.4,115.8,14.1,81,13.6C45.2,13.1,14.8,43,14.3,76.8C11.8,115.9,44.8,146.3,79.7,146z' fill='currentColor'/><path class='st0' d='M65.9,79.9c0,10,0,20.1,0,30.1c0,1.7,0,3.4-0.1,5c-0.2,5-3.8,7.6-8.5,6.2c-7-2.1-13.3-7.8-14.5-16.8c-1.2-8.4,1.5-15.3,8-20.8c1-0.8,1.8-1.8,2.7-2.7c0.7-0.7,0.8-1.4,0-2.2c-0.8-0.8-1.5-1.7-2.4-2.5c-4.8-4.4-7.7-9.6-8.2-16.2c-0.7-8.9,5.7-18.6,14.2-21.4c4.9-1.6,8.8,1.3,8.8,6.4C65.8,56.7,65.8,68.3,65.9,79.9C65.8,79.9,65.9,79.9,65.9,79.9z' fill='currentColor'/><path class='st0' d='M83.2,79.9c0,10.8,0,21.6,0,32.4c0,1.1-0.1,2.2-0.2,3.2c-0.4,2.9-2.5,4.8-5.2,4.7c-2.6,0-4.8-2-5.1-4.8c-0.1-0.6-0.1-1.2-0.1-1.8c0-10.7,0-21.4,0-32c0-11.2,0-22.4,0.1-33.6c0-1.6,0.3-3.2,0.8-4.7c0.8-2.3,3-3.6,5.4-3.3c2.2,0.2,3.9,2,4.3,4.4c0.1,0.7,0.1,1.5,0.1,2.3C83.3,57.8,83.3,68.9,83.2,79.9C83.3,79.9,83.3,79.9,83.2,79.9z' fill='currentColor'/><path class='st0' d='M100.6,80c0,6.1,0,12.2,0,18.3c0,0.7-0.1,1.5-0.3,2.2c-0.9,2.6-3.2,4.1-5.6,3.7c-2.8-0.4-4.6-2.6-4.6-5.5c0-6.4,0-12.7,0.1-19.1c0-5.7,0-11.3,0-17c0-1.3,0.2-2.6,0.6-3.9c0.7-2.2,2.4-3.3,4.5-3.3c2.2,0,4.1,1.1,4.7,3.3c0.5,1.7,0.6,3.5,0.6,5.3C100.7,69.5,100.7,74.8,100.6,80C100.7,80,100.6,80,100.6,80z' fill='currentColor'/><path class='st0' d='M107.4,80c0.1-1.7,0.1-3.1,0.3-4.5c0.4-2.2,2-3.4,4.6-3.6c2.4-0.2,3.9,0.6,4.8,2.7c1.5,3.5,1.5,7.1,0.1,10.6c-0.8,1.9-2.5,2.9-4.6,2.7c-2.7-0.2-4.4-1.3-4.8-3.5C107.5,82.9,107.5,81.3,107.4,80z' fill='currentColor'/></svg>";
+        }
         else{
           icon = "fab fa-"+i;
+          icon_insert = "";
         }
-        stores_array.push({id:i, store_title: store_title, stores: stores, icon:icon, key:key});
+        stores_array.push({id:i, store_title: store_title, stores: stores, icon:icon, key:key, icon_insert:icon_insert});
         key = key + 1
+        icon_insert = "";
       }
     });
     let stores_order = ["spotify","apple","soundcloud","youtube","deezer","beatport","itunes","yandex","anghami","amazon","tidal","napster","tiktok","bandcamp"];
@@ -239,8 +247,8 @@ $(function() {
     console.log(sortedObj);
     $.each(sortedObj, function(i, value){
       $("#platforms").append(
-            "<div class='mr-2 mb-2' title='"+ value.store_title +"'><a class='icons-fx text-white platform-icons "+ value.id +"_card rounded-circle' href="+ value.stores +" target='_blank'><span class='fa-fw "+ value.icon +"' aria-hidden='true'></span><span class='sr-only'>"+ value.store_title +"</span></a></div>");
-          console.log(value.stores);
+            "<div class='mr-2 mb-2' title='"+ value.store_title +"'><a class='icons-fx text-white platform-icons "+ value.id +"_card rounded-circle' href="+ value.stores +" target='_blank'><span class='fa-fw "+ value.icon +"' aria-hidden='true'>"+ value.icon_insert +"</span><span class='sr-only'>"+ value.store_title +"</span></a></div>");
+          console.log(value.stores, value.icon, value.icon_insert);
       });
     });
 });
