--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -172,6 +172,8 @@ $(function() {
     $.each(result[release_str][0], function(i, stores){
       console.log(result[release_str][i]);
       if(stores !== "" && i !== "dark" && i !== "title" && i !== "artists" && i !== "date" && i !== "image" && i !== "image_secure" && i !== "tidal-buy" && i !== "amazon-music" && i !== "download"){
+        icon = "fab fa-"+i;
+        icon_insert = "";
         if (i == "itunes"){
           store_title = "iTunes Store";
           icon = "iconify' data-icon='el:star'";
