--- a/css/bayza.css
+++ b/css/bayza.css
@@ -139,6 +139,10 @@ h1 {
     color: #f33!important;
 }
 
+.vk_card {
+    background: #0077ff;
+}
+
 .beatport_card {
     background: #020202;
     color: #00ff95!important;
