--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -235,6 +235,12 @@
             </a>
           </div>
           <div class="m-1">
+            <a class="icons-fx text-white platform-icons vk_card rounded-circle" href="https://vk.com/artist/bayza" target="_blank" title="VKontakte">
+              <span class="fab fa-vk fa-fw" aria-hidden="true"></span>
+              <span class='sr-only'>VKontakte</span>
+            </a>
+          </div>
+          <div class="m-1">
             <a class="icons-fx text-white platform-icons anghami_card rounded-circle" href="https://play.anghami.com/artist/1414847" target="_blank" title="Anghami">
               <svg class="fa-fw" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="1em" height="1em"
                 viewBox="0 0 160 160"  preserveAspectRatio="xMidYMid meet" role="img">
