--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -217,7 +217,7 @@
             </a>
           </div>
           <div class="m-1">
-            <a class="icons-fx text-white platform-icons amazon_card rounded-circle" href="https://music.amazon.com/artists/B00KX8ETU6/bayza" target="_blank" title="Amazon Music">
+            <a class="icons-fx text-white platform-icons amazon-music_card rounded-circle" href="https://music.amazon.com/artists/B00KX8ETU6/bayza" target="_blank" title="Amazon Music">
               <span class="fab fa-amazon fa-fw" aria-hidden="true"></span>
               <span class='sr-only'>Amazon Music</span>
             </a>
