--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bayza {{ page.year }} {{ page.type }}"/>
     <meta property="og:site_name" content="Bayza"/>
-    <meta property="og:image" content="https://bayzamusic.com/images/{{ page.year }}{{ page.link }}bayzacom.jpg"/>
+    <meta property="og:image" content="https://bayzamusic.com/images/logomt-sq-300.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
     <meta property="og:image:width" content="300"/>
     <meta property="og:image:height" content="300"/>
@@ -24,7 +24,7 @@
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:image" content="https://bayzamusic.com/images/{{ page.year }}{{ page.link }}bayzacom.jpg"/>
+    <meta name="twitter:image" content="https://bayzamusic.com/images/logomt.jpg"/>
     <meta name="twitter:title" content="Bayza {{ page.year }} {{ page.type }}">
     <meta name="twitter:description" content="{{ page.year }} {{ page.type }}">
     <meta name="twitter:site" content="@bayzamusic"/>
