--- a/css/bayza.css
+++ b/css/bayza.css
@@ -168,10 +168,7 @@ h1 {
 }
 
 .anghami_card {
-    background: rgb(45,164,224);
-    background: -moz-linear-gradient(180deg, rgba(45,164,224,1) 0%, rgba(155,44,213,1) 50%, rgba(218,61,148,1) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(45,164,224,1) 0%, rgba(155,44,213,1) 50%, rgba(218,61,148,1) 100%);
-    background: linear-gradient(180deg, rgba(45,164,224,1) 0%, rgba(155,44,213,1) 50%, rgba(218,61,148,1) 100%);
+    background: #010101;
 }
 
 .font-weight-sc {
