--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -146,7 +146,7 @@
                   </div>
                 </div>
                   <h5 class="mb-0"><small><p class="mb-0 mt-2">Show Me What You Feel</p></small></h5>
-                  <small><p class="mb-4">dbeet x Bayza</p></small>
+                  <small><p class="mb-4">dbeet, Bayza</p></small>
               </div>
             </div> 
           </div>
