--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -139,14 +139,14 @@
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container">
-                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2022/show-me-what-you-feel.jpg">
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2022/young-free.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
-                    <small><h5>Jun 10, 2022</h5></small>
+                    <small><h5>Jul 8, 2022</h5></small>
                   </div>
                 </div>
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Show Me What You Feel</p></small></h5>
-                  <small><p class="mb-4">dbeet, Bayza</p></small>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Young & Free</p></small></h5>
+                  <small><p class="mb-4">DJ Phellix, Bayza</p></small>
               </div>
             </div> 
           </div>
