--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -297,7 +297,7 @@
         <div class="my-3 font-weight-light text-justify">
           <p>
             Ahmed Rangel, also known as 
-            <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank" title="Bayza Spotify">Bayza</a></b>, is a 24 years old electronic/dance music producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>.
+            <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank" title="Bayza Spotify">Bayza</a></b>, is a <span id="age"></span> years old electronic/dance music producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>.
           </p>
           <p>
             His very first steps with music comes  in 2014 releasing a big room house music during many years. It was until 2017 when he transitioned his style to melbourne bounce. In 2019 he finds himself in deep house style which fits him perfectly. He started making remixes of famous pop songs, then in September 2019 he self-released his first album named Genuine. In 2020 Bayza mainly focused on producing deep house with slap house influence and you should looking forward for his coming tunes.
@@ -322,16 +322,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
     <script>
       $(document).ready(function() {
-        //Be sure to include <img id="coverImage" src="" alt=""/>
-        let $myImage = $("#coverimage");
-        let colorThief = new ColorThief();
-        
-        //Grabs 8 swatch color palette from image and sets quality to 5 (0 =slow, 10=default/fast)
-        let cp = colorThief.getPalette($myImage[0], 5, 10);
-        
-        //Sets color to 4rd color in the palette.
-        $('.release-color').css('color','rgb('+cp[2][0]+','+cp[2][1]+','+cp[2][2]+')');
-      });
+        const now = new Date();
+        const birth = new Date("June 15, 1998 00:00:00");
+        const diff = Math.abs(now - birth);
+        const age = Math.floor(diff / (1000 * 60 * 60 * 24 * 365.25)); 
+        console.log(now);
+        console.log(birth);
+        document.getElementById('age').innerHTML = age;
+      }); 
     </script>
   </body>
 </html>
