--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -135,21 +135,21 @@
         <h3 class="mt-3 text-uppercase text-white">Recent Music</h3>
         <h5 class="font-weight-light">Check out my latest releases</h5>
         <div class="row my-4 text-left">
-          <!-- <div class="col-6 col-lg-3">
+          <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container">
-                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2022/on-your-mind.jpg">
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2022/true-lovers.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
-                    <small><h5>Sep 1, 2022</h5></small>
+                    <small><h5>Nov 4, 2022</h5></small>
                   </div>
                 </div>
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">On Your Mind</p></small></h5>
-                  <small><p class="mb-4">DJ Phellix, Bayza</p></small>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">True Lovers</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small>
               </div>
             </div>
-          </div> -->
+          </div>
           {% for item in sorted %} 
           <div class="col-6 col-lg-3">
             <div class="item">
