--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -123,7 +123,7 @@
             </div>
             <div class="col-12 col-md-4 d-none d-md-block portfolio-block block-intro mt-2">
               <div class="avatar mt-1 mr-0 text-left px-1" style="border-radius:0px">
-                <img id="coverimage" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="" width="120px" height="120px">
+                <img id="covers" class="" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="" width="120px" height="120px">
               </div>
             </div>
           </div>
@@ -294,26 +294,33 @@
     <section id="about" class="bg-dark text-secondary text-center py-5">
       <div class="container" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white">About</h3>
-        <div class="my-3 font-weight-light text-justify">
-          <p>
-            Ahmed Rangel, also known as 
-            <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank" title="Bayza Spotify">Bayza</a></b>, is a <span id="age"></span> years old electronic/dance music producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>.
-          </p>
-          <p>
-            His very first steps with music comes  in 2014 releasing a big room house music during many years. It was until 2017 when he transitioned his style to melbourne bounce. In 2019 he finds himself in deep house style which fits him perfectly. He started making remixes of famous pop songs, then in September 2019 he self-released his first album named Genuine. In 2020 Bayza mainly focused on producing deep house with slap house influence and you should looking forward for his coming tunes.
-          </p>
-          <p>
-            In 2021 Bayza is hitting his very first 1M plays on Spotify with his <b><a href="https://bayzamusic.com/releases/2020/everythingiwanted" target="_blank" title="Everything I Wanted | Bayza">Everything I Wanted</a></b>'s cover. 
-          </p>
-          <p>
-            He has currently signed tracks with Records Labels such as
-            "<b><a href="https://instagram.com/bounceunited" target="_blank" title="Bounce United's Instagram">Bounce United</a></b>, 
-            <b><a href="https://www.youtube.com/channel/UCoo_WkQMj2h-WFi7nBQjtyw" target="_blank" title="Miss DeepShine's YouTube Channel">DeepShine Records</a></b>, 
-            <b><a href="https://instagram.com/palmtherapysounds" target="_blank" title="Palm Therapy Sounds's Instagram">Palm Therapy Sounds</a></b>, 
-            <b><a href="https://instagram.com/onesevenmusic" target="_blank" title="One Seven Music's Instagram">One Seven Music</a></b>, 
-            <b><a href="https://instagram.com/frqncy_official" target="_blank" title="FRQNCY's Instagram">FRQNCY</a></b>,
-            <b><a href="https://instagram.com/thenightdrive_nd" target="_blank" title="The Night Drive's Instagram">The Night Drive</a></b>".
-          </p>
+        <div class="row">
+          <div class="col-lg-8 my-3 font-weight-light text-justify">
+            <p>
+              Ahmed Rangel, also known as 
+              <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank" title="Bayza Spotify">Bayza</a></b>, is a <span id="age"></span> years old electronic/dance music producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>.
+            </p>
+            <p>
+              His very first steps with music comes  in 2014 releasing a big room house music during many years. It was until 2017 when he transitioned his style to melbourne bounce. In 2019 he finds himself in deep house style which fits him perfectly. He started making remixes of famous pop songs, then in September 2019 he self-released his first album named Genuine. In 2020 Bayza mainly focused on producing deep house with slap house influence and you should looking forward for his coming tunes.
+            </p>
+            <p>
+              In 2021 Bayza is hitting his very first 1M plays on Spotify with his <b><a href="https://bayzamusic.com/releases/2020/everythingiwanted" target="_blank" title="Everything I Wanted | Bayza">Everything I Wanted</a></b>'s cover. 
+            </p>
+            <p>
+              He has currently signed tracks with Records Labels such as
+              "<b><a href="https://instagram.com/bounceunited" target="_blank" title="Bounce United's Instagram">Bounce United</a></b>, 
+              <b><a href="https://www.youtube.com/channel/UCoo_WkQMj2h-WFi7nBQjtyw" target="_blank" title="Miss DeepShine's YouTube Channel">DeepShine Records</a></b>, 
+              <b><a href="https://instagram.com/palmtherapysounds" target="_blank" title="Palm Therapy Sounds's Instagram">Palm Therapy Sounds</a></b>, 
+              <b><a href="https://instagram.com/onesevenmusic" target="_blank" title="One Seven Music's Instagram">One Seven Music</a></b>, 
+              <b><a href="https://instagram.com/frqncy_official" target="_blank" title="FRQNCY's Instagram">FRQNCY</a></b>, 
+              <b><a href="https://instagram.com/thenightdrive_nd" target="_blank" title="The Night Drive's Instagram">The Night Drive</a></b>, 
+              <b>Melodicity Recordings</b>, 
+              <b><a href="https://www.instagram.com/miamibeats" target="_blank" title="Miami Beats's Instagram">Miami Beats</a></b>, 
+              <b><a href="https://www.instagram.com/stormmusicgroup" target="_blank" title="Storm's Instagram">Storm Music Group</a></b>, 
+              <b><a href="https://www.instagram.com/differenttwinsrecords" target="_blank" title="Storm's Instagram">Different Twins Records</a></b>,".
+            </p>
+          </div>
+          <div class="col-lg-4 text-center"><img id="covers" class="img-fluid shadow" src="/images/bayza-about.jpg"></div>
         </div>
       </div>
     </section>
