--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -25,4 +25,17 @@
               last_scroll_top = scroll_top;
           });
       }
+    // navbar transparent on scroll
+    window.onscroll = function() {scrollFunction()};
+    function scrollFunction() {
+        if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
+            document.getElementById("navbar").style.background = "#121212";
+        }
+        else if (window.innerWidth < 767) {
+            document.getElementById("navbar").style.background = "#121212";
+        }else {
+            document.getElementById("navbar").style.background = "transparent";
+        }
+    }
     </script>
+    
